force-app/main/default/objects/yacht_bookingg__c/yacht_bookingg__c.object-meta.xml
<CustomObject>
    <description>gulet,motorboat,sailng boat</description>
    <label>yacht booking</label>
    <nameField>
        <displayFormat>YBID-{0000000000}</displayFormat>
        <label>yacht booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>yacht bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>