force-app/main/default/objects/yacht_bookingg__c/fields/check_out__c.field-meta.xml
<CustomField>
    <fullName>check_out__c</fullName>
    <formula>check_in__c   +  week__c   * 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check out</label>
    <type>Date</type>
</CustomField>