force-app/main/default/objects/yacht_bookingg__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>yacht bookings</relationshipLabel>
    <relationshipName>yacht_bookings</relationshipName>
    <type>Lookup</type>
</CustomField>