force-app/main/default/objects/yacht_bookingg__c/fields/iscrewneed__c.field-meta.xml
<CustomField>
    <fullName>iscrewneed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iscrewneed</label>
    <type>Checkbox</type>
</CustomField>