force-app/main/default/objects/yacht_bookingg__c/fields/ismedicdeclared__c.field-meta.xml
<CustomField>
    <fullName>ismedicdeclared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ismedicdeclared</label>
    <type>Checkbox</type>
</CustomField>