force-app/main/default/objects/yacht_bookingg__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>yacht bookings</relationshipLabel>
    <relationshipName>yacht_bookings</relationshipName>
    <type>Lookup</type>
</CustomField>