force-app/main/default/objects/yacht_bookingg__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hall</fullName>
                <default>true</default>
                <label>Hall</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>prepaid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>