force-app/main/default/objects/yacht_bookingg__c/fields/total_price__c.field-meta.xml
<CustomField>
    <fullName>total_price__c</fullName>
    <formula>IF(    iscrewneed__c  , week__c * ( yacht__r.Price__c + ( yacht__r.crewprice__c  * 7)) ,   week__c *   yacht__r.Price__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>