force-app/main/default/objects/yacht_bookingg__c/fields/week__c.field-meta.xml
<CustomField>
    <fullName>week__c</fullName>
    <defaultValue>1</defaultValue>
    <label>week</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>