force-app/main/default/objects/yacht_bookingg__c/fields/yacht__c.field-meta.xml
<CustomField>
    <fullName>yacht__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>yacht</label>
    <referenceTo>Yatcht__c</referenceTo>
    <relationshipLabel>lookup</relationshipLabel>
    <relationshipName>yacht_bookings</relationshipName>
    <type>Lookup</type>
</CustomField>