force-app/main/default/objects/yacht_bookingg__c/fields/yacht_route__c.field-meta.xml
<CustomField>
    <fullName>yacht_route__c</fullName>
    <description>free route description</description>
    <label>yacht route</label>
    <type>TextArea</type>
</CustomField>