force-app/main/default/objects/yacht_bookingg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>check_out__c</columns>
    <columns>check_in__c</columns>
    <columns>yacht_route__c</columns>
    <columns>week__c</columns>
    <columns>status__c</columns>
    <columns>yacht__c</columns>
    <columns>ismedicdeclared__c</columns>
    <columns>isspecialeventneeded__c</columns>
    <columns>total_price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>